feat: aded device id , fixed signup , added middleware to inject device id from server side
