# docs/swagger.json
@@ -86,7 +86,21 @@
     },
     "definitions": {
         "auth.SignUpRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "sex": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
         },
         "auth.SignUpResponse": {
             "type": "object"
@@ -94,6 +108,10 @@
         "health.HealthResponse": {
             "type": "object",
             "properties": {
+                "device_id": {
+                    "description": "Server time in Unix timestamp (seconds)",
+                    "type": "string"
+                },
                 "msg": {
                     "description": "Message",
                     "type": "string"
